--- a/Helperland/helperland1.0/Views/Admin/AdminPanel.cshtml
+++ b/Helperland/helperland1.0/Views/Admin/AdminPanel.cshtml
@@ -51,9 +51,9 @@
                 <div class="navbar-nav ms-auto">
 
                     <div class="user-icon nav-item">
-                        <img src="/Images/user.png" alt="...">
+                        <img src="/image/user.png" alt="...">
                         <span class="admin-name">@ViewBag.Name</span>
-                        <a asp-controller="UserManagement" asp-action="Logout"><img src="/Images/logout.png" alt="" class="logout" ></a>
+                        <a asp-controller="UserManagement" asp-action="logout"><img src="/image/logout.png" alt="" class="logout" ></a>
                     </div>
 
                 </div>
@@ -92,6 +92,201 @@
 
         </div>
     </section>
+
+
+    
+    <section class="popupModel">
+
+
+
+
+
+
+
+
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary d-none" data-bs-toggle="modal" id="AdminEditModelBtn" data-bs-target="#AdminEditModal">
+            Launch demo modal
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="AdminEditModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" style="max-width: 550px;">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Edit Service Request</h5>
+                        <button type="button" id="AdminEditModalClose" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body" style="font-weight:500">
+                        <div class="alert alert-danger d-none mt-3 d-flex justify-content-center" style="max-width:800px" id="AdminEditPopupAlert" role="alert">
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="AdminEditpopupDate" class="form-label">Date</label>
+                                <input type="date" class="form-control" name="date" id="AdminEditPopupDate" placeholder="canlender">
+
+                                @*min=@TomorrowDate value=@TomorrowDate*@
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="AdminEditPopupTime">Time</label>
+                                <select class="form-select" id="AdminEditPopupTime"
+                                        aria-label="Default select example">
+                                    <option selected value="07:00:00">7:00 </option>
+                                    <option value="07:30:00">7:30 </option>
+                                    <option value="08:00:00">8:00 </option>
+                                    <option value="08:30:00">8:30 </option>
+                                    <option value="09:00:00">9:00 </option>
+                                    <option value="09:30:00">9:30 </option>
+                                    <option value="10:00:00">10:00 </option>
+                                    <option value="10:30:00">10:30 </option>
+                                    <option value="11:00:00">11:00 </option>
+                                    <option value="11:30:00">11:30 </option>
+                                    <option value="12:00:00"> 12:00 </option>
+                                    <option value="12:30:00">12:30 </option>
+                                    <option value="13:00:00"> 13:00 </option>
+                                    <option value="13:30:00">13:30 </option>
+                                    <option value="14:00:00"> 14:00 </option>
+                                    <option value="14:30:00">14:30 </option>
+                                    <option value="15:00:00"> 15:00 </option>
+                                    <option value="15:30:00">15:30 </option>
+                                    <option value="16:00:00"> 16:00 </option>
+                                    <option value="16:30:00">16:30 </option>
+                                    <option value="17:00:00"> 17:00 </option>
+                                    <option value="17:30:00">17:30 </option>
+                                    <option value="18:00:00"> 18:00 </option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <label class="form-label mt-4" style="font-weight:700"> Service Address</label>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupStreet" class="form-label">Street Name</label>
+                                <input type="text" class="form-control" name="Street" id="AdminEditPopupStreet">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupHouse" class="form-label">House No</label>
+                                <input type="text" class="form-control" name="House" id="AdminEditPopupHouse">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupPostalCode" class="form-label">PostalCode</label>
+                                <input type="text" class="form-control" name="PostalCode"
+                                       id="AdminEditPopupPostalCode">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupCity" class="form-label">City</label>
+                                <input type="text" class="form-control" name="City" id="AdminEditPopupCity">
+
+                            </div>
+                        </div>
+                        <label class="form-label mt-4" style="font-weight:700"> Invoice Address</label>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupInvoiceStreet" class="form-label">Street Name</label>
+                                <input type="text" class="form-control" name="Street"
+                                       id="AdminEditPopupInvoiceStreet">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupInvoiceHouse" class="form-label">House No</label>
+                                <input type="text" class="form-control" name="House"
+                                       id="AdminEditPopupInvoiceHouse">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupInvoicePostalCode" class="form-label">PostalCode</label>
+                                <input type="text" class="form-control" name="PostalCode"
+                                       id="AdminEditPopupInvoicePostalCode">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="AdminEditPopupInvoiceCity" class="form-label">City</label>
+                                <input type="text" class="form-control" name="City" id="AdminEditPopupInvoiceCity">
+
+                            </div>
+                        </div>
+
+
+                        <!-- 1 col  -->
+                        <div class="row">
+
+                            <div class="row mt-4">
+                                <label for="AdminEditPopupWhyEdit" class="form-label ">
+                                    Why do you want to
+                                    reSchedule Service req?
+                                </label>
+                                <textarea class="form-control ms-2" name="City" id="AdminEditPopupWhyEdit"
+                                          placeholder="Why do you want to reSchedule Service req?"></textarea>
+                            </div>
+                            <div class="row mt-4">
+                                <label for="AdminEditPopupWhyCall" class="form-label">
+                                    Call Center EMP Notes
+                                </label>
+                                <textarea class="form-control ms-2" name="City" id="AdminEditPopupWhyCall"
+                                          placeholder="Enter Notes"></textarea>
+                            </div>
+                            <div class="row mt-4 mb-2"><button type="button" id="AdminEditModalUpdateBtn" class=" ms-2 btn btn-primary ">Update</button></div>
+
+                        </div>
+
+                    </div>
+
+
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <button type="button" class="btn btn-primary d-none" id="complete" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Launch demo modal
+        </button>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" style="max-width: 300px;">
+                <div class="modal-content">
+                    <div class="modal-header">
+
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <h4 class="modal-title text-center" id="ModalLabel_SID"></h4>
+                        <h5 id="Model_SID"></h5>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+    </section>
+
+
+
 
     <!-- script -->
 
