--- a/Helperland/helperland1.0/Views/Shared/adminServiceReq.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/adminServiceReq.cshtml
@@ -59,10 +59,10 @@
                             </div>
 
                             <div class="col">
-                                <input type="date" class="form-control" placeholder="From Date" id="filterFromdate">
+                                <input type="text" class="form-control" placeholder="From Date"   id="filterFromdate" onfocus="(this.type='date')" onblur="if(this.value==''){this.type='text'}">
                             </div>
                             <div class="col">
-                                <input type="date" class="form-control" placeholder="To Date" id="filterTodate">
+                                <input type="text" class="form-control" placeholder="To Date" id="filterTodate" onfocus="(this.type='date')" onblur="if(this.value==''){this.type='text'}">
                             </div>
                             <div class="col">
                                 <a class="btn btn-primary form-search me-4" id="filterSubmit">Serach</a>
@@ -78,7 +78,7 @@
                     <table id="adminservicereqtable" class="admin-table">
                         <thead class="table-light">
                             <tr>
-                                <th scope="col" class="thid" >
+                                <th  scope="col" class="thid" >
                                     Service Id<img src="/image/sort.png" alt="...">
                                 </th>
                                 <th scope="col" class="thdate">
