--- a/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
@@ -45,7 +45,7 @@
 
         </button>
 
-        <button class="tablinks" onclick="upcoming_service(event, 'favourite_pros')" id="favouriteProsTabBtn"> Favourite Pros </button>
+        <button class="tablinks" onclick="upcoming_service(event, 'favouritePros')" id="favouriteProsTabBtn"> Favourite Pros </button>
         <button class="tablinks" onclick="upcoming_service(event, 'invoices')" id="invoiceTabBtn">Invoices</button>
         <button class="tablinks" onclick="upcoming_service(event, 'notification')" id="notificationTabBtn"> Notifications</button>
         <button class="tablinks d-none" onclick="upcoming_service(event, 'customer_Settings')" id="SettingsTabBtn"> Setting </button>
@@ -58,6 +58,15 @@
     @await Html.PartialAsync("CustomerServiceHistoryPartial")
     @await Html.PartialAsync("CustomerSettingPartial")
 
+    <div id="favouritePros" class="tab-contant">
+ 
+    <div class="row" id="favouriteProsGrid">
+       
+       
+       
+    </div>
+
+     </div>
 
 
 
@@ -65,8 +74,30 @@
 </section>
 
 
+@*//alert popup*@
+
+<button type="button" class="btn btn-primary d-none" id="acceptAlert" data-bs-toggle="modal" data-bs-target="#alertPopup">
+        alert popup
+    </button>
+
+    <div class="modal fade" id="alertPopup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" style="max-width:500px">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <h4 class="modal-title" id="NewServiceAcceptStatus">  </h4>
+                    <h5 id="Model_SID"></h5>
 
 
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
 
