--- a/Helperland/helperland1.0/wwwroot/css/admin.css
+++ b/Helperland/helperland1.0/wwwroot/css/admin.css
@@ -394,3 +394,22 @@ td button {
     }
 
 
+
+
+
+/*//refund*/
+
+
+
+
+.w500 {
+    font-weight: 500;
+}
+
+.w700 {
+    font-weight: 700;
+}
+
+label {
+    margin-top: 0.5rem;
+}
