--- a/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
+++ b/Helperland/helperland1.0/Views/Customer/CustomerDashboard.cshtml
@@ -60,13 +60,38 @@
 
     <div id="favouritePros" class="tab-contant">
  
-    <div class="row" id="favouriteProsGrid">
-       
+  
+
+        <table id="favouriteProsTable">
+            <thead class="d-none">
+                <th >
+                    Icon
+                </th>
+                <th>
+                    Name
+                </th>
+                <th>
+                    Button
+                </th>
+
+            </thead>
+            <tbody id="favouriteProsTbody" class="d-flex flex-wrap" >
+                <tr  >
+                    <td class="d-block"> <img class= "cap-icon" src = "/image/cap.png " alt = ".." ></td>
+                    <td class="d-block"><h3> vedant </h3></td>
+                    <td class="d-block"><button>try</button><button>try2</button></td>
+                </tr>
+               
+
+            </tbody>
+        </table>
+
+
        
        
     </div>
 
-     </div>
+    
 
 
 
