--- a/Helperland/helperland1.0/Views/ServiceProvider/SPServiceRequest.cshtml
+++ b/Helperland/helperland1.0/Views/ServiceProvider/SPServiceRequest.cshtml
@@ -69,6 +69,51 @@
 
 
 
+    <button type="button" class="btn btn-primary d-none" id="acceptAlert" data-bs-toggle="modal" data-bs-target="#alertPopup">
+        alert popup
+    </button>
+
+    <div class="modal fade" id="alertPopup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" style="max-width:500px">
+            <div class="modal-content">
+                <div class="modal-header">
+
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <h4 class="modal-title" id="NewServiceAcceptStatus">  </h4>
+                    <h5 id="Model_SID"></h5>
+
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+    <div class="modal" tabindex="-1" id="SPdeleteModelServiceRequest">
+    <div class="modal-dialog modal-dialog-centered" style="max-width: 500px">
+        <div class="modal-content">
+             <input type="hidden" id="CancelRequestId" name="CancelRequestId" />
+            <div class="modal-header">
+                <h5 class="modal-title">Cancel Service Request</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h4>Are you sure, want to cancel this request</h4>
+                <div class="text-center">
+                    <button class="customerCancel" type="button" data-bs-dismiss="modal" class="mt-2 cancel" id="SpCancelRequestBtn">Yes, Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 
 </section>
 
