--- a/Helperland/helperland1.0/Views/Shared/SpNewServiceRequest.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/SpNewServiceRequest.cshtml
@@ -137,7 +137,7 @@
 
                     <div id="detailPopUpUpComing">
                         <button id="newServiceReqCompleteBtn" type="submit">Complete</button>
-                        <button id="newServiceReqCancelBtn" type="submit">Cancel</button>
+                        <button id="newServiceReqCancelBtn" data-bs-toggle="modal" data-bs-target="#SPdeleteModelServiceRequest" type="submit">Cancel</button>
                     </div>
 
                 
@@ -154,27 +154,4 @@
 
 
 
-    @* alert popup*@
-
-    <button type="button" class="btn btn-primary d-none" id="acceptAlert" data-bs-toggle="modal" data-bs-target="#alertPopup">
-        alert popup
-    </button>
-
-    <div class="modal fade" id="alertPopup" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" style="max-width:500px">
-            <div class="modal-content">
-                <div class="modal-header">
-
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-
-                    <h4 class="modal-title" id="NewServiceAcceptStatus">  </h4>
-                    <h5 id="Model_SID"></h5>
-
-
-                </div>
-
-            </div>
-        </div>
-    </div>
+  
