--- a/Helperland/helperland1.0/Views/Shared/SpBlockCustomer.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/SpBlockCustomer.cshtml
@@ -1,8 +1,27 @@
 ﻿<div id="BlockCustomer" class="tab-contant">
  
-    <div class="row" id="customerGrid">
-       
-       
-    </div>
+     <table id="customerBlockTable">
+            <thead class="d-none">
+                <th >
+                    Icon
+                </th>
+                <th>
+                    Name
+                </th>
+                <th>
+                    Button
+                </th>
+
+            </thead>
+            <tbody id="customerBlockTbody" class="d-flex flex-wrap" >
+                <tr  >
+                    <td class="d-block"> <img class= "cap-icon" src = "/image/cap.png " alt = ".." ></td>
+                    <td class="d-block"><h3> vedant </h3></td>
+                    <td class="d-block"><button>try</button><button>try2</button></td>
+                </tr>
+               
+
+            </tbody>
+        </table>
 
 </div>
