Bug fixed in fab customer

--- a/Helperland/helperland1.0/Views/Shared/form3.cshtml
+++ b/Helperland/helperland1.0/Views/Shared/form3.cshtml
@@ -79,6 +79,25 @@
                     </form>
             </div>
             <hr />
+
+            
+        <div id="favouriteSPdiv">
+
+            <h2> Your Favourite ServiceProvider </h2>
+            <hr />
+            <h6> You can choose your favourite provider from below list </h6>
+
+            <div class="row" id="favouriteSProw">
+
+         
+
+            </div>
+        </div>
+
+         <hr />
+
+
+
             <br /><br />
             <button class="continue" type="button" onclick="Clickable('form4Btn');ClickFunction('form4Btn')">
 						Continue
